# AidDataSDATest

./: CMakeLists.txt  main.cpp
include/algorithms/: MergeSortGeneric.h
include/data/: golf_scores.csv
include/entities/: Comparator.h  Coordinate.h  Golfer.h  GolferComparator.h  NameComparator.h  XComparator.h  YComparator.h
src/: main.cpp
src/algorithms/: MergeSortGeneric.cpp
src/entities/: Comparator.cpp  Coordinate.cpp  Golfer.cpp  GolferComparator.cpp  NameComparator.cpp  XComparator.cpp  YComparator.cpp
